<resources>
    <string name="app_name">Software de Gestão Financeira</string>
    <string name="username_hint">Insira o seu nome</string>
    <string name="password_hint">Insira a sua senha</string>
    <string name="password_confirmation_hint">Confirme a sua senha</string>
    <string name="email_hint">Insira o seu email</string>
    <string name="account_name_hint">Insira o nome da conta</string>
    <string name="associated_bank_hint">Insira o nome do banco</string>
    <string name="account_amount_hint">Saldo da conta</string>
    <string name="amount_hint">Insira o valor</string>
    <string name="entity_hint">Insira o nome da entidade</string>
    <string name="subscription_hint">Insira o nome da subscrição</string>

    <string name="periodicity_seekbar">Escolha a periodicidade</string>

    <string name="account_spinner_tooltip">Selecione a conta</string>
    <string name="category_spinner_tooltip">Selecione a categoria da Entidade</string>
    <string name="entity_spinner_tooltip">Selecione a entidade</string>

    <string name="bank_associated_prompt">A conta está associada a um banco?</string>
    <string name="category_prompt">Deseja especificar a categoria?</string>

    <string name="go_back_button_text">Voltar</string>
    <string name="no_account_prompt">Ainda não possui uma conta?</string>

    <string name="user_insertion_success">Usuário inserido com sucesso!</string>
    <string name="account_creation_success">Conta criada com sucesso!</string>
    <string name="entity_creation_success">Entidade criada com sucesso</string>
    <string name="movement_creation_success">Movimento registado com sucesso!</string>
    <string name="successful_update">Actualização feita com sucesso!</string>
    <string name="successful_deletion">Remoção feita com sucesso!</string>

    <string name="insertion_error">Erro na inserção</string>
    <string name="error">Erro!</string>
    <string name="wrong_email_or_password_error">Email ou senha incorrectos</string>
    <string name="empty_field_error">Preencha todos os campos</string>
    <string name="different_passwords_error">Senhas diferentes</string>
    <string name="email_already_used_error">Email já foi usado, insira outro!</string>

    <string name="transaction_credit">Crédito</string>
    <string name="transaction_debit">Débito</string>
    <string name="fab_description">Adicionar Movimento</string>
    <string name="search">Search here</string>
    <string name="data">Data</string>
    <string name="entidade">Entidade</string>
    <string name="valor">Valor</string>
    <string name="transacao">Transação</string>

    <string name="criar">Criar</string>
    <string name="registar">Registar</string>
    <string name="remover">Remover</string>
    <string name="guardar">Guardar</string>

    <string name="add_entity">Adicionar Entidade</string>
    <string name="add_subscription">Adicionar Subscrição</string>
    <string name="add_conta">Adicionar Conta</string>

    <string name="pages_inicio">Início</string>
    <string name="pages_historico">Histórico</string>
    <string name="pages_menu">Menu</string>
    <string name="pages_estatisticas">Estatísticas</string>
    <string name="pages_definicoes">Definições</string>
    <string name="activos">Activos</string>
    <string name="passivos">Passivos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_entidade">Entidades</string>
    <string name="menu_contas">Contas</string>
    <string name="menu_subscriptions">Subscrições</string>

    <string name="last_account_id_key">lastAccountID</string>
    <string name="last_entity_id_key">lastEntityID</string>
    <string name="last_movement_id_key">lastMovementKey</string>
    <string name="last_subscription_id_key">lastSubscriptionKey</string>

    <string name="currency_key">currency</string>

    <string-array name="debit_categories">
        <item>Serviços</item>
        <item>Lazer</item>
        <item>Transporte</item>
        <item>Comunicação</item>
        <item>Alimentação</item>
        <item>Outros</item>
    </string-array>

    <string-array name="credit_categories">
        <item>Venda</item>
        <item>Empréstimo</item>
        <item>Salário</item>
        <item>Outros</item>
    </string-array>

    <string-array name="periodicidades">
        <item>Diária</item>
        <item>Semanal</item>
        <item>Mensal</item>
        <item>Anual</item>
    </string-array>
</resources>