<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CriarConta">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:scaleX="1.8"
        android:scaleY="1.8"
        android:src="@drawable/backgroud_image"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/go_back_button_text"
        android:textFontWeight="900"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:onClick="voltar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:hint="@string/account_name_hint"
            android:inputType="textCapSentences"
            android:id="@+id/accountNameEditText"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="40dp"
            android:hint="@string/account_amount_hint"
            android:inputType="number"
            android:id="@+id/accountAmountEditText"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkboxBankAssociated"
            android:onClick="contaAssociada"
            android:text="@string/bank_associated_prompt"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/associated_bank_hint"
            android:inputType="textCapSentences"
            android:enabled="false"
            android:id="@+id/associatedBankEditText"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:text="@string/criar"
            android:textSize="18sp"
            android:paddingHorizontal="40dp"
            android:paddingVertical="10dp"
            android:onClick="criarConta"/>

    </LinearLayout>

</RelativeLayout>