<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CriarEntidade">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:scaleX="1.8"
        android:scaleY="1.8"
        android:src="@drawable/backgroud_image"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/go_back_button_text"
        android:drawableLeft="@drawable/ic_baseline_arrow_back_ios_24"
        android:drawableTint="@color/primaryColor"
        android:textFontWeight="900"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:onClick="voltar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/entity_hint"
            android:inputType="textCapSentences"
            android:id="@+id/entityEditText"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/category_prompt"
            android:checked="true"
            style="@style/Widget.Material3.CompoundButton.CheckBox"
            android:textSize="13sp"
            android:id="@+id/checkBoxCategoryPrompt"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radioGroup">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/transaction_credit"
                android:checked="true"
                android:id="@+id/radioButtonCredit"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/transaction_debit"
                android:id="@+id/radioButtonDebit"/>
        </RadioGroup>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="60dp"
            android:layout_marginBottom="40dp"
            android:id="@+id/spinnerCategory"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:text="@string/criar"
            android:textSize="18sp"
            android:paddingHorizontal="40dp"
            android:paddingVertical="10dp"
            android:onClick="criarEntidade"/>

    </LinearLayout>

</RelativeLayout>