<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/go_back_button_text"
        android:textFontWeight="900"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:onClick="voltar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textCapWords"
            android:hint="@string/username_hint"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:id="@+id/usernameEditTextSignUp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:id="@+id/emailEditTextSignUp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:id="@+id/passwordEditTextSignUp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:hint="@string/password_confirmation_hint"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:id="@+id/passwordConfirmationEditTextSignUp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:text="Registar"
            android:textSize="18sp"
            android:paddingHorizontal="40dp"
            android:paddingVertical="10dp"
            android:onClick="registar"/>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>