<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CriarSubscricao">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:scaleX="1.8"
        android:scaleY="1.8"
        android:src="@drawable/backgroud_image"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/go_back_button_text"
        android:drawableLeft="@drawable/ic_baseline_arrow_back_ios_24"
        android:drawableTint="@color/primaryColor"
        android:textFontWeight="900"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:onClick="voltar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/subscription_hint"
            android:inputType="textCapSentences"
            android:id="@+id/subscriptionEditText"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="60dp"
            android:layout_marginBottom="40dp"
            android:id="@+id/subscriptionEntityList"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/subscriptionRadioGroup">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/transaction_credit"
                android:checked="true"
                android:id="@+id/subscriptionRadioButtonCredit"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/transaction_debit"
                android:id="@+id/subscriptionRadioButtonDebit"/>
        </RadioGroup>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/periodicity_seekbar"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/periodicity_label"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:progress="3"
            android:max="3"
            android:id="@+id/periodicity_seekbar"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/amount_hint"
            android:inputType="numberDecimal"
            android:id="@+id/subscriptionEditTextAmount"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:text="@string/criar"
            android:textSize="18sp"
            android:paddingHorizontal="40dp"
            android:paddingVertical="10dp"
            android:onClick="criarSubscricao"/>

    </LinearLayout>

</RelativeLayout>