<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingleSubscricao">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:scaleX="1.8"
        android:scaleY="1.8"
        android:src="@drawable/backgroud_image"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/go_back_button_text"
        android:drawableLeft="@drawable/ic_baseline_arrow_back_ios_24"
        android:drawableTint="@color/primaryColor"
        android:textFontWeight="900"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:onClick="voltar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/subscription_hint"
                android:inputType="textCapSentences"
                android:id="@+id/subscriptionEditText"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/periodicity_seekbar"
                    app:layout_constraintStart_toStartOf="parent"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/periodicity_label"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="20dp"
                android:progress="3"
                android:max="3"
                android:id="@+id/periodicity_seekbar"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/amount_hint"
                android:inputType="numberDecimal"
                android:id="@+id/subscriptionEditTextAmount"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:text="@string/guardar"
                android:textSize="18sp"
                android:textFontWeight="600"
                android:paddingHorizontal="40dp"
                android:paddingVertical="10dp"
                android:onClick="guardar"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:text="@string/remover"
                android:textSize="18sp"
                android:textFontWeight="600"
                android:paddingHorizontal="40dp"
                android:paddingVertical="10dp"
                android:onClick="remover"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>